# Army

./: CMakeLists.txt  exceptions.h
ability/: DefaultAbility.h  MagicAbility.cpp  MagicAbility.h  PriestAbility.cpp  PriestAbility.h  VampireAbility.cpp  VampireAbility.h  WarlockAbility.cpp  WarlockAbility.h  Werewolf.cpp  WerewolfAbility.h
interface/: Observer.cpp  Observer.h  Observerable.cpp  Observerable.h
spell/: FireBall.cpp  FireBall.h  Heal.cpp  Heal.h  Spell.cpp  Spell.h  SpellBook.cpp  SpellBook.h
spellcaster/: Healer.cpp  Healer.h  Necromancer.cpp  Necromancer.h  Priest.cpp  Priest.h  SpellCaster.cpp  SpellCaster.h  Warlock.cpp  Warlock.h  Wizard.cpp  Wizard.h
state/: MagicState.cpp  MagicState.h  State.cpp  State.h
tests/: test_berserker.cpp  test_demon.cpp  test_healer.cpp  test_magicState.cpp  test_necromancer.cpp  test_priest.cpp  test_rogue.cpp  test_soldier.cpp  test_spell.cpp  test_state.cpp  test_unit.cpp  test_vampire.cpp  test_warlock.cpp  test_werewolf.cpp  test_wizard.cpp
unit/: Berserker.cpp  Berserker.h  Demon.cpp  Demon.h  Rogue.cpp  Rogue.h  Soldier.cpp  Soldier.h  Unit.cpp  Unit.h  Vampire.cpp  Vampire.h  Werewolf.cpp  Werewolf.h
